# Pasturesofplenty

./: DATA_ACCESS.md  README.md  RESULTS.md  RESULTS_ESP32.md  RESULTS_LTST.md  RESULTS_MICRO_PMU.md  RESULTS_SOLAR.md  geometry_lie.py  math.md  solar.py
ESP32/: CMakeLists.txt  README.md  ltst_esp32_contract_sim.py  ltst_v1_bench_compare.py  ltst_v1_bench_session.py  ltst_v1_export_replay_samples.py  ltst_v1_feature_packet.h  ltst_v1_hmm_log_parser.py  ltst_v1_hmm_reference.py  ltst_v1_live_compare.py  ltst_v1_uart_capture.py  ltst_v1_uart_decoder.py  ltst_v1_uart_replay.py
ESP32/main/: CMakeLists.txt  ltst_v1_commands.c  ltst_v1_commands.h  ltst_v1_live_pipeline.c  ltst_v1_live_pipeline.h  ltst_v1_replay_samples.c  ltst_v1_replay_samples.h  ltst_v1_transport.c  ltst_v1_transport.h  main.c
artifact/: ltst_bench_prototype_definition.md  ltst_feature_triage.py  ltst_full_86_study.py  ltst_memory_compression_probe.py  ltst_memory_taxonomy.py  ltst_pb_excursion_taxonomy.py  ltst_s4_effective_operator_probe.py  ltst_stiffness_taxonomy.py  ltst_three_record_graph_sidecar_test.py  ltst_three_record_online_dmd_clean_rebuild.py  ltst_three_record_online_dmd_gate_probe.py  ltst_transition_hmm.py  ltst_v1_feature_contract.md  micro_pmu_jet.py  micro_pmu_oct1_experiment.py  micro_pmu_sequence_episode_evaluator.py  minimal_5_record_dual_kernel_check_remote.ipynb
neurons/: eeg_chbmit_geometry.py  eeg_sleep_edf_geometry.py
paper/: README.md  discussion_and_captions.md  ltst_memory_v2.md
results/: DATA_SOURCES.md  FIGURES.md  README.md  RESULTS_SUMMARY.csv  __init__.py  (+11 more)
(+24 files in other folders)
